@@ -8,6 +8,6 @@
 </TD></TR></TABLE>
 <HR>
 And that's about it.
-
+<img src="perl.gif"/>
 </BODY>
 </HTML>
