@@ -1,16 +1,13 @@
 use strict;
-use Image::Grab;
+use Image::Grab qw(grab);
 use Cwd;
-
-print "1..1\n";
+use Test::Simple tests => 2;
 
 my $pwd = cwd;
 $ENV{DOMAIN} ||= "example.com"; # Net::Domain warnings
 my $image = Image::Grab->grab(URL=>"file://" . $pwd . "/t/data/perl.gif");
 
-if(defined $image) {
-   print "ok 1\n";
-} else {
-   print "not ok 1\n";
-}
+ok(defined $image);
 
+my $image2 = grab(URL=>"file://" . $pwd . "/t/data/perl.gif");
+ok(defined $image2);
